<resources>
    <string name="app_name">APIT</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>


    <string-array name="cust_type">
        <item>Rice Miller</item>
        <item>Rice Trader</item>
        <item>Rice Broker</item>
        <item>Rice Engineer</item>
        <item>Farmer</item>
        <item>Research Students</item>
    </string-array>
    <string-array name="processes">
        <item>Select type of processes</item>
        <item>Parboiling</item>
        <item>Steam Curing Plant</item>
        <item>Drying</item>
    </string-array>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <drawable name="clr_normal">@color/white</drawable>
    <drawable name="clr_pressed">@color/black</drawable>

    <string name="which_process">which process</string>
    <string name="parboiling_drying_process">Parboiling / Drying</string>
    <string name="steam_curing_drying">Steam curing Plant / Drying</string>
    <string name="drying">Drying</string>
    <string name="parboiling">parboiling</string>

    <string name="soaking_tank">Soaking Tank</string>
    <string name="batch_wise_title">Batch Wise LSU Layer</string>
    <string name="mixed_wise_title">Mixed Wise Continuous Dryer</string>
    <string name = "no_of_hydration">No. of Soaking</string>
    <string name="no_of_hydration_tanks">No. of Soaking Tanks</string>
    <string name="no_post_stmng_tanks">No. of Post Steaming Tanks</string>
    <string name="post_steamng_tanks_capacity">Post Steaming Tanks Capacity</string>
    <string name = "capacity">Capacity</string>
    <string name = "dryer_capacity">Dryer Capacity</string>
    <string name="no_final_steaming_tank">No. of Final Steaming Tank</string>
    <string name="no_of_cooker">No. of Cooker</string>
    <string name="cooker_capacity">Cooker Capacity</string>
    <string name="no_of_pre_steaming_tanks">No. of Pre-Steaming Tanks</string>
    <string name="no_of_steamng_tanks">No. of Steaming Tanks</string>
    <string name="ageing_tanks">Ageing Tanks</string>
    <string name = "num_of_dryers">No. of Dryers</string>
    <string name = "variety_of_paddy">Variety of Paddy</string>
    <string name = "age_of_paddy">Age of Paddy</string>
    <string name = "pincode">Pincode</string>
    <string name = "processing_location">Processing Location</string>
    <string name = "paddy_s_moisture">Moisture of the Paddy</string>

    <string name="moisture">Moisture*</string>
    <string name="grain_temperature">Grain Temperature*</string>
    <string name="rest_time">Rest Time (in Bins)*</string>
    <string name="total_weight">Total Weight*</string>
   <string name="stage_model_desc">Gel cook stations are the key quality produce in any parboiling plant.APIT with the inputs from Worlds Greatest Grain Scientist Dr. Kshirod Bhattacharya,have developed a unique gel cook station for producing High Quality parboilng paddy.Unlike the conventional type of cookers where the body is cylindrical and the steaming process is intense,the state-of-the-art APIT Gel Cook stations have a contoured design inernal to facilitate proper mixing of padddy while it is steamed.
   </string>
    <string name="after_process_txt">All the values to be mentioned from Drier output</string>
    <string name="your_id">Your ID : </string>
    <string name="color_of_rice">Desired Output Color of Rice</string>

    <string name="broken">broken</string>
    <string name="total_paddy_weight">Total Paddy Weight</string>
    <string name="de_husker">De Husker</string>
    <string name="polisher_1">Polisher 1</string>
    <string name="polisher_2">Polisher 2</string>
    <string name="polisher_3">Polisher 3</string>
    <string name="polisher_4">Polisher 4</string>
    <string name="polisher_5">Polisher 5</string>
    <string name="polisher_6">Polisher 6</string>
    <string name="grader">Grader</string>
    <string name="sorter">Sorter</string>
    <string name="head">head rice</string>
    <string name="total_percentage">total percentage</string>
    <string name="graph">Graph</string>

    <string name="facebook_link">&lt;a href="https://www.facebook.com">https://www.facebook.com&lt;/a></string>
    <string name="linkedin_link">&lt;a href="https://www.linkedin.com">https://www.linkedin.com&lt;/a></string>
    <string name="website_link">&lt;a href="https://www.apit.co.in">https://www.apit.co.in&lt;/a></string>

    <string name="google_maps_key">AIzaSyD1n0H3wRjD8k4R-9t7M-QWcc08jd6TKH4</string>

    <string name="model_1">Model 1</string>
    <string name="model_2">Model 2</string>
    <string name="model_3">Model 3</string>
    <string name="model_4">Model 4</string>
    <string name="model_5">Model 5</string>
    <string name="batch_wise">Batch Wise LSU Layer</string>
    <string name="mixed_wise">Mixed Wise Continuous Dryer</string>

    <string name="waiting_form_approval_msg">Waiting for Admin\'s Approval....</string>

    <string name="api_key">AIzaSyAwLNcqrIq_j8UxCto0Y1Wpkat83zXLFC0</string>

    <string name="thank_u_for_ur_interest">Thank you for your interest</string>
    <string name="pls_contct_our_sales_team">Please contact our sales team</string>
</resources>
