<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlProcess"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center"
        android:theme="@style/ToolbarColoredBackArrow"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:background="@drawable/toggle_g"
            android:padding="5dp" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lProcessContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_lr"
                android:paddingBottom="8dp">

                <TextView
                    style="@style/radiobtn_r_process_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/which_process" />

                <RadioGroup
                    android:id="@+id/rdoGrpProcess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdoBtnParboiling"
                        style="@style/radiobtn_e_process"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parboiling_drying_process" />

                    <RadioButton
                        android:id="@+id/rdoBtnSteamCuring"
                        style="@style/radiobtn_e_process"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/steam_curing_drying" />

                    <RadioButton
                        android:id="@+id/rdoBtnDrying"
                        style="@style/radiobtn_e_process"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drying" />
                </RadioGroup>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/llModels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_lr"
                    android:paddingBottom="8dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tvModelName"
                        style="@style/radiobtn_r_process_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/parboiling" />

                    <RadioGroup
                        android:id="@+id/rdioGrpModels"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:onClick="getParboilingModels">

                        <RadioButton
                            android:id="@+id/rdoBtnPModel1"
                            style="@style/radiobtn_model_dryer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/model_1" />

                        <RadioButton
                            android:id="@+id/rdoBtnPModel2"
                            style="@style/radiobtn_model_dryer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/model_2" />

                        <RadioButton
                            android:id="@+id/rdoBtnPModel3"
                            style="@style/radiobtn_model_dryer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/model_3" />

                        <RadioButton
                            android:id="@+id/rdoBtnPModel4"
                            style="@style/radiobtn_model_dryer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/model_4" />

                        <RadioButton
                            android:id="@+id/rdoBtnPModel5"
                            style="@style/radiobtn_model_dryer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/model_5" />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llModelsSteam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_lr"
                    android:paddingBottom="8dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tvModelNameSteam"
                        style="@style/radiobtn_r_process_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/parboiling" />

                    <RadioGroup
                        android:id="@+id/rdioGrpModelsSteam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rdoBtnSteamModel1"
                            style="@style/radiobtn_model_dryer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/model_1" />

                        <RadioButton
                            android:id="@+id/rdoBtnSteamModel2"
                            style="@style/radiobtn_model_dryer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/model_2" />

                    </RadioGroup>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llDryingMethods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llModels"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_lr"
                android:paddingBottom="8dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvDryingMethod"
                    style="@style/radiobtn_r_process_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drying" />

                <RadioGroup
                    android:id="@+id/rdioGrpDryMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdoBtnBatchWise"
                        style="@style/radiobtn_model_dryer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/batch_wise" />

                    <RadioButton
                        android:id="@+id/rdoBtnMixedWise"
                        style="@style/radiobtn_model_dryer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mixed_wise" />


                </RadioGroup>
            </LinearLayout>
            <!-- steam curing -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="300dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnApply"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/yellow_roundcrnr"
                    android:duplicateParentState="true"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Apply"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>